# gUki

./: .gitignore  CMakeLists.txt  README.md
src/: AppProperties.h  DialogHelper.c  DialogHelper.h  FindReplace.c  FindReplace.h  MainWindow.c  MainWindow.h  MenuManager.c  MenuManager.h  PageManager.c  PageManager.h  Workspace.c  Workspace.h  main.c
